# rust-cipher

./: Cargo.toml  test.txt  test.txt.enc  text.txt
src/: main.rs
