[package]
name = "rust-cipher"
version = "1.0.0"
authors = ["zhuchops zhuchok@duck.com"]
license = "Apache-2.0"
description = "A tool to encrypt or decrypt files with password"
homepage = "https://github.com/zhuchops/rust-cipher.git"
repository = "https://github.com/zhuchops/rust-cipher.git"
keywords = ["cli", "crypt", "cipher"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5.3"
clap = { version = "4.5.53", features = ["derive"] }
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
rpassword = "7.4.0"
sha2 = "0.10.9"
